# corescope

./: .gitmodules  CMakeLists.txt  COPYRIGHT  README.md
cmake/modules/: CheckAtomic.cmake  CheckFunctionExists.c  FindFFTW3F.cmake  FindLibConfig.cmake  FindLimeSDR.cmake  FindMKL.cmake  FindMbedTLS.cmake  FindOATPP.cmake  FindPCSCLite.cmake  FindPolarssl.cmake  FindSCTP.cmake  FindSRSGUI.cmake  FindSSE.cmake  FindSoapySDR.cmake  FindUHD.cmake  FindZeroMQ.cmake  FindbladeRF.cmake  SRSRANPackage.cmake  SRSRANVersion.cmake
corescope/: CMakeLists.txt  corescope.conf.example
corescope/hdr/: clock.h  corescope_interfaces.h  scope.h  scope_cfg.h
corescope/hdr/gnb/: gnb.h  gnb_pdcp.h  gnb_rrc.h  gnb_rrc_ue.h
corescope/hdr/rest_api/: SwaggerComponent.h  app_component.h  error_handler.h  scope_controller.h  scope_rest.h  static_controller.h
corescope/hdr/rest_api/dtos/: StatusDto.hpp  dto_gnb_config.h  dto_gnb_status.h  dto_ue_config.h  dto_ue_status.h
corescope/hdr/ue/: ue.h  ue_pdcp.h  ue_rrc_nr.h
corescope/src/: CMakeLists.txt  clock.cc  main.cc  scope.cc
corescope/src/gnb/: CMakeLists.txt  gnb.cc  gnb_pdcp.cc  gnb_rrc.cc  gnb_rrc_ue.cc
corescope/src/rest_api/: CMakeLists.txt  error_handler.cc  scope_controller.cc  scope_rest.cc
corescope/src/ue/: CMakeLists.txt  ue.cc  ue_pdcp.cc  ue_rrc_nr.cc
examples/corescope-api-client/: README.md  corescope-tester.py  pyproject.toml
examples/corescope-api-client/corescope_api_client/: __init__.py  client.py  types.py
examples/corescope-api-client/corescope_api_client/api/default/: create_ue.py  get_gnb_by_id_config.py  get_gnb_by_id_status.py  get_ue.py  get_ue_status.py  update_ue_state.py
examples/corescope-api-client/corescope_api_client/models/: __init__.py  dto_gnb_status.py  dto_ngap_config.py  dto_ngap_status.py  dto_ue_args.py  dto_ue_gw_args.py  dto_ue_id.py  dto_ue_log_args.py  dto_ue_nas_5_g_args.py  dto_ue_nas_5_g_status.py  dto_ue_nas_pdu_session_args.py  dto_ue_pcap_args.py  dto_ue_status.py  dto_ue_status_update.py  dto_ue_usim_args.py  statusenum_string.py
